--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>免费电子书下载|按ctrl+D收藏本站</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-	<meta name="keywords" content="外汇,外汇站,外汇交易,货币交易,外汇交易知识,技术面分析,基本面分析,外汇交易理念,外汇指标,外汇课程,外汇交易课程">
-    <meta name="description" content="外汇站（fx-z.com）介绍了外汇相关的基本知识，告诉您如何进行自己的技术面和基本面分析，讲解先进的交易理念，并且为您阐述失败交易者与专业交易者之间的真正区别。">
+	<meta name="keywords" content="">
+    <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="./fxz_files/cssReseat.css">
     <link rel="stylesheet" type="text/css" href="./fxz_files/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./fxz_files/jquery.mCustomScrollbar.css">
@@ -23,7 +23,7 @@
 
 <div class="main" avalonctrl="pm">
     <aside class="menu box-shadow">
-        <header class="menu-logo"><a href="https://zgvh.top/" target="_bank"><img class="menu-logo-icon hidden-xs" src="./fxz_files/fxzlogo.png" alt="外汇站"></a></header>
+        <header class="menu-logo"><a href="https://zgvh.top/" target="_bank"><img class="menu-logo-icon hidden-xs" src="./fxz_files/fxzlogo.png" alt=""></a></header>
         <!--hidden-xs @media (max-width: 767px)-->
          <nav class="menu-nav hidden-xs mCustomScrollbar _mCS_1" id="menuNav">
            <div class="mCustomScrollBox mCS-dark" id="mCSB_1" style="position:relative; height:100%; overflow:hidden; max-width:100%;">
@@ -2679,7 +2679,7 @@
 
         </div>
         <!-- <footer class="footer box-shadow">
-            Copyright © 外汇站  
+            Copyright ©   
         </footer>-->
     </div>
 </div>
