--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="gb2312" /> 
 
-<meta http-equiv="refresh" content="0;url=https://cloud.tencent.com/act/cps/redirect?redirect=1575&cps_key=8eb5bd7fecaebaa8c13d45dcda49294d&from=console">
+<meta http-equiv="refresh" content="0;url=https://cloud.tencent.com/act/double11?spread_hash_key=e7345e7e788c4874c80e2e055640fcdf&cps_key=8eb5bd7fecaebaa8c13d45dcda49294d">
 <title></title>
 </head>
 <body>
